Fix white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,17 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Raleway', sans-serif;
 }
+html {
+    height: 100%;
+  }
+body {
+min-height: 100%;
+margin: 0;
+padding: 0;
+}
 *{
     box-sizing: border-box;
+    border: 1px solid red;
 }
 
 h1, h2, h3, a{
